git-svn-id: file:///home/igor/dev/stuff/svnbackup/trunk@4344 ef7698a4-5110-0410-9fc6-c7eb3693863f