@@ -197,6 +197,34 @@
 					</webAppSourceDirectory>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>maven-jetty-plugin</artifactId>
+				<configuration>
+					<contextPath>/</contextPath>
+					<argLine>
+						-Xmx=1024m -XX:MaxPermSize=256m
+						-XX:+UseConcMarkSweepGC
+						-XX:+CMSPermGenSweepingEnabled
+						-XX:+CMSClassUnloadingEnabled
+					</argLine>
+					<connectors>
+						<connector
+							implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+							<port>7089</port>
+						</connector>
+					</connectors>
+					<scanIntervalSeconds>10</scanIntervalSeconds>
+					<systemProperties>
+						<systemProperty>
+							<name>org.apache.commons.logging.Log</name>
+							<value>
+								org.apache.commons.logging.impl.SimpleLog
+							</value>
+						</systemProperty>
+					</systemProperties>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<reporting>
